# infinibrowser

./: README.md  pyproject.toml
infinibrowser/: __init__.py  client.py  exceptions.py
infinibrowser/types/: __init__.py  items.py  search.py
