[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infinibrowser"
version = "0.1.1"
description = "A simple API wrapper for infinibrowser.wiki"
authors = [{ name = "GameRoMan", email = "gameromandev@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = [
	"infinibrowser",
	"infinite",
	"craft",
	"browser",
	"database",
	"api",
	"tools",
	"client",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
]
dependencies = ["pydantic"]

[project.urls]
Homepage = "https://github.com/gameroman/infinibrowser"

[tool.hatch.build.targets.wheel]
packages = ["infinibrowser"]

[tool.black]
line-length = 105
target-version = ["py310", "py311", "py312", "py313"]
skip-magic-trailing-comma = true
