[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infinibrowser"
version = "0.1.3"
description = "A simple API wrapper for infinibrowser.wiki"
authors = [{ name = "GameRoMan", email = "dev@rman.dev" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
keywords = [
	"infinibrowser",
	"infinite",
	"craft",
	"browser",
	"database",
	"api",
	"tools",
	"client",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
]
dependencies = ["pydantic>=2.11.7"]

[project.urls]
Source = "https://github.com/gameroman/infinibrowser"

[tool.hatch.build.targets.wheel]
packages = ["infinibrowser"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
skip-magic-trailing-comma = true

[tool.taskipy.tasks]
build = "python -c \"import shutil; shutil.rmtree('dist', ignore_errors=True)\" && hatch build"
publish = "twine upload -r infinibrowser dist/*"
release = "task build && task publish"
